--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -417,28 +417,49 @@ jobs:
       - destroy-environment
       - revert-migrations 
 
-#   smoke-test:
-#     docker:
-#       # Lightweight Docker image 
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Install dependencies
-#           command: |
-#             # your code here
-#       - run:
-#           name: Get backend url
-#           command: |
-#             # your code here
-#       - run:
-#           name: Backend smoke test.
-#           command: |
-#             # your code here
-#       - run:
-#           name: Frontend smoke test.
-#           command: |
-#             # your code here
-#       # Here's where you will add some code to rollback on failure  
+  smoke-test:
+    docker:
+      - image: alpine:latest
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            apk add  --no-cache aws-cli tar gzip npm nodejs curl
+      - run:
+          name: Get backend url
+          command: |
+            export BACKEND_IP=$(aws ec2 describe-instances --query \
+            'Reservations[*].Instances[*].PublicIpAddress' --filters \
+            "Name=tag:project,Values=udapeople" --output text)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "${API_URL}"
+      - run:
+          name: Backend smoke test.
+          command: |
+            if curl "${API_URL}/api/status" | grep "ok"
+            then
+                return 0
+            else
+                return 1
+            fi
+      - run:
+          name: Get frontend url
+          command: |
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7} \
+            .s3-website-us-east-1.amazonaws.com/#/employees"
+      - run:
+          name: Frontend smoke test.
+          command: |
+              if curl -s ${URL} | grep "Welcome"
+              then
+                  # Change this to 0 after the job fails
+                return 1
+              else
+                return 1
+              fi
+      - destroy-environment
+      - revert-migrations  
 
 #   cloudfront-update:
 #     docker:
