--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -447,8 +447,7 @@ jobs:
       - run:
           name: Get frontend url
           command: |
-            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7} \
-            .s3-website-us-east-1.amazonaws.com/#/employees"
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
       - run:
           name: Frontend smoke test.
           command: |
@@ -488,8 +487,7 @@ cleanup:
     steps:
       - checkout
       - run: yum install -y tar gzip
-      - attach_workspace:
-          at: ~/
+
       - run:
           name: Get old stack workflow id
           command: |
