--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -379,8 +379,7 @@ jobs:
             cd frontend
             npm install
             npm run build
-            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
-            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+            aws s3 cp ./dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
       # Here's where you will add some code to rollback on failure 
       - destroy-environment
       - revert-migrations     
@@ -499,12 +498,12 @@ jobs:
           command: |
             if [[ "$CurrentWorkflowID" != "$OldWorkflowID" ]]
             then
-              echo "$OldWorkflowID!=$CurrentWorkflowID => delete old version"
+              echo "------ delete old version ---------"
               aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
             else
-              echo "$OldWorkflowID==$CurrentWorkflowID => latest version of deployment running..."
+              echo "------- latest version of deployment running --------"
             fi
             
 
